Fix tooltip overlap on icon hover, Add vertical align mixin

--- a/src/sass/icons/_icons-sizes.scss
+++ b/src/sass/icons/_icons-sizes.scss
@@ -64,7 +64,7 @@ $iconsSizes:
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   &:hover{
-    transform: scale(1.3, 1.3);
+    transform: scale(2, 2) translatey(20%);
     fill: $primary !important;
     stroke: $primary !important;
   }
