--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -47,3 +47,11 @@
   }
   @return null;
 }
+
+@mixin vertical-align($position: relative) {
+  position: $position;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
